network/alb.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Application Load Balancer and Target Group Setup

Parameters:
  EnvironmentName:
    Type: String
    Description: Deployment environment (e.g., dev, staging, prod)
  VPCId:
    Type: String
    Description: The VPC ID
  PublicSubnetIds:
    Type: String
    Description: Public subnet IDs for the ALB
  ALBAccessLogBucketName:
    Type: String
    Description: Name of the S3 Bucket used for ALB access logs


Resources:
  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Subnets: !Split [",", !Ref PublicSubnetIds]
      SecurityGroups:
        - !Ref ALBSecurityGroup
      LoadBalancerAttributes:
        - Key: idle_timeout.timeout_seconds
          Value: "60"
        - Key: "access_logs.s3.enabled"
          Value: "true"
        - Key: "access_logs.s3.bucket"
          Value: !Ref ALBAccessLogBucketName
        - Key: "access_logs.s3.prefix"
          Value: "alb-logs"
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-alb"

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP and HTTPS traffic to ALB
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0

  ALBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      VpcId: !Ref VPCId
      TargetType: ip
      Port: 8080
      Protocol: HTTP
      HealthCheckPath: /actuator/health
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      UnhealthyThresholdCount: 2
      Matcher:
        HttpCode: 200
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-target-group"

Outputs:
  ALBDNS:
    Description: ALB DNS Name
    Value: !GetAtt ALB.DNSName

  ALBTargetGroup:
    Description: The ARN of the Target Group
    Value: !Ref ALBTargetGroup

  ALBArn:
    Description: The ARN of the Application Load Balancer
    Value: !Ref ALB

  ALBSecurityGroup:
    Description: ALB Security Group
    Value: !Ref ALBSecurityGroup
